<resources>
    <string name="app_name">alzessmentsLocal</string>
    <string name="txt_username">Username</string>
    <string name="txt_password">Password</string>
    <string name="bts_signIn">Sign In</string>
    <string name="txt_noAccount">No account? Register here!</string>
    <string name="txt_nUsername">Username</string>
    <string name="txt_nPassword">Password</string>
    <string name="txt_nCPassword">Confirm Password</string>
    <string name="txt_nEmail">Email</string>
    <string name="rBTN_male">male</string>
    <string name="rBTN_female">female</string>
    <string name="txt_nName">First Name</string>
    <string name="txt_nDOB">Date of Birth</string>
    <string name="btn_nSignUp">Sign Up</string>
    <string name="btn_FAQ">Functional Activities Questionnaire</string>
    <string name="btn_moca">Montreal Cognitive Assessment</string>
    <string name="btn_mmse">Mini Mental State Examination</string>
    <string name="txt_selectAssesment">Please select which assessment you wish to take...</string>
    <string name="txt_profile">Profile</string>
    <string name="txt_prevScore">Previous Scores</string>
    <string name="txt_moca">Montreal Cognitive Assessment</string>
    <string name="txt_mmse">Mini Mental State Examination</string>
    <string name="txt_faq">Functional Activities Questionnaire</string>
    <string name="btn_back">Back</string>
    <string name="txt_logOut">Log Out</string>
    <string name="txt_mocaResult">MoCA</string>
    <string name="txt_mmseResult">MMSE</string>
    <string name="txt_faqResult">FAQ</string>
    <string name="txt_faqInstructions">Rate your ability on the following tasks using the buttons below:</string>
    <string name="btn_faq3">Dependent</string>
    <string name="btn_faq2">Requires assistance</string>
    <string name="btn_faq1">Has difficulty but does by self</string>
    <string name="btn_faq0">Normal</string>
    <string name="btn_faq00">Never did the activity but could do now</string>
    <string name="btn_faq01">Never did the activity but would have difficulty</string>
    <string name="txt_mocaAgreeSV">I have a supervisor present</string>
    <string name="txt_mocaDisagreeSV">I do not have a supervisor present</string>
</resources>