<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3C3C3C"
    tools:context=".NewUser">

    <EditText
        android:id="@+id/editText_nDOB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:ems="10"
        android:hint="@string/txt_nDOB"
        android:inputType="date"
        android:textColor="#FFFFFF"
        android:textColorHint="#A8A8A8"
        app:layout_constraintBottom_toTopOf="@+id/button_nSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <EditText
        android:id="@+id/editText_nUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="492dp"
        android:ems="10"
        android:hint="@string/txt_nUsername"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#A8A8A8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/editText_nPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:hint="@string/txt_nPassword"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textColorHint="#A8A8A8"
        app:layout_constraintBottom_toTopOf="@+id/editText_NCPassword"
        app:layout_constraintStart_toStartOf="@+id/editText_nEmail"
        app:layout_constraintTop_toBottomOf="@+id/editText_nEmail" />

    <EditText
        android:id="@+id/editText_NCPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:ems="10"
        android:hint="@string/txt_nCPassword"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textColorHint="#A8A8A8"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="@+id/editText_nPassword"
        app:layout_constraintTop_toBottomOf="@+id/editText_nPassword" />

    <EditText
        android:id="@+id/editText_nEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:hint="@string/txt_nEmail"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#A8A8A8"
        app:layout_constraintBottom_toTopOf="@+id/editText_nPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_nUsername" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="208dp"
        android:layout_height="33dp"
        android:layout_marginBottom="11dp"
        android:checkedButton="@id/radioButton_male"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/editText_nDOB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_NCPassword">

        <RadioButton
            android:id="@+id/radioButton_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rBTN_male"
            android:textColor="#B6B6B6"
            android:textColorHint="#FFFFFF" />

        <RadioButton
            android:id="@+id/radioButton_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rBTN_female"
            android:textColor="#B6B6B6" />
    </RadioGroup>

    <Button
        android:id="@+id/button_nSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="73dp"
        android:background="#9E9E9E"
        android:onClick="SignUpOK"
        android:text="@string/btn_nSignUp"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_nDOB" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="108dp"
        android:layout_height="128dp"
        android:layout_marginTop="49dp"
        app:layout_constraintBottom_toTopOf="@+id/editText_nUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_alz" />

</androidx.constraintlayout.widget.ConstraintLayout>