<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3C3C3C"
    tools:context=".ProfileActivity">

    <TextView
        android:id="@+id/textView_pMMSElast"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="61dp"
        android:layout_marginRight="61dp"
        android:layout_marginBottom="186dp"
        android:gravity="center"
        android:text="TextView"
        android:textColor="#A8A8A8" />

    <TextView
        android:id="@+id/textView_pMMSE2last"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="61dp"
        android:layout_marginRight="61dp"
        android:layout_marginBottom="145dp"
        android:gravity="center"
        android:text="TextView"
        android:textColor="#A8A8A8" />

    <TextView
        android:id="@+id/textView_pMMSE3last"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="61dp"
        android:layout_marginRight="61dp"
        android:layout_marginBottom="105dp"
        android:gravity="center"
        android:text="TextView"
        android:textColor="#A8A8A8" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="132dp"
        android:layout_height="133dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:foreground="@drawable/logo_alz" />

    <TextView
        android:id="@+id/textView_profile"
        android:layout_width="105dp"
        android:layout_height="47dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="173dp"
        android:text="@string/txt_profile"
        android:textColor="#A8A8A8"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/textView_profileScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_profileDisp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:text="@string/txt_prevScore"
        android:textColor="#A8A8A8"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="11dp"
        android:layout_marginLeft="11dp"
        android:layout_marginBottom="4dp"
        android:onClick="logOut_btn"
        android:text="@string/txt_logOut" />

    <TextView
        android:id="@+id/textView_profileDisp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_profile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="TextView"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView_mocaResult"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView_pMOCAlast"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:gravity="center"
        android:text="@string/txt_mocaResult"
        android:textColor="#A8A8A8"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView_faqResult"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="65dp"
        android:layout_marginLeft="65dp"
        android:layout_marginBottom="230dp"
        android:gravity="center"
        android:text="@string/txt_faqResult"
        android:textColor="#A8A8A8"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView_mmseResult"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="65dp"
        android:layout_marginRight="65dp"
        android:layout_marginBottom="230dp"
        android:text="@string/txt_mmseResult"
        android:gravity="center"
        android:textColor="#A8A8A8"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView_pFAQlast"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="61dp"
        android:layout_marginLeft="61dp"
        android:layout_marginBottom="185dp"
        android:gravity="center"
        android:text="TextView"
        android:textColor="#A8A8A8" />

    <TextView
        android:id="@+id/textView_pMOCAlast"
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="185dp"
        android:gravity="center"
        android:text="TextView"
        android:textColor="#A8A8A8" />

    <TextView
        android:id="@+id/textView_pMOCA2last"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="145dp"
        android:gravity="center"
        android:text="TextView"
        android:textColor="#A8A8A8" />

    <TextView
        android:id="@+id/textView_pMOCA3last"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="105dp"
        android:gravity="center"
        android:text="TextView"
        android:textColor="#A8A8A8" />

    <TextView
        android:id="@+id/textView_pFAQ2last"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="61dp"
        android:layout_marginLeft="61dp"
        android:layout_marginBottom="145dp"
        android:gravity="center"
        android:text="TextView"
        android:textColor="#A8A8A8" />

    <TextView
        android:id="@+id/textView_pFAQ3last"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="61dp"
        android:layout_marginLeft="61dp"
        android:layout_marginBottom="105dp"
        android:gravity="center"
        android:text="TextView"
        android:textColor="#A8A8A8" />

</RelativeLayout>